--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -57,9 +57,7 @@ jobs:
 
     - name: Build and push image Aliyun
       run: |
-        # 修复：使用 --password-stdin 通过标准输入传递密码
-        echo "$ALIYUN_REGISTRY_PASSWORD" | docker login --username "$ALIYUN_REGISTRY_USER" --password-stdin "$ALIYUN_REGISTRY"
-        
+        docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $ALIYUN_REGISTRY
         # 数据预处理,判断镜像是否重名
         declare -A duplicate_images
         declare -A temp_map
